testsuite/tests/checks/exits_from_conditional_loops/test.out
loops.adb:5:7: error: exit from conditional loop
5 |       exit when S (J) = '@';  --  FLAG
  |       ^^^^^^^^^^^^^^^^^^^^^^ 

